[package]
name = "xl"
version = "0.1.0"
authors = ["Joshua Toyota <jearsh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slab = "0.4.3"
# csv = "1.1"
# encoding = "0.2"
# crossterm = "0.20"
# tui = { version = "0.15", default-features = false, features = ['crossterm'] }
